<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/fragment_right"
             tools:context=".fragment.RightMainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/detect_type_1"
            android:text="@string/detect_type_1"
            android:textSize="@dimen/detect_type_text_size"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/button_ripple_1"
            android:layout_weight="3"/>

        <Button
            android:id="@+id/detect_type_2"
            android:text="@string/detect_type_2"
            android:textSize="@dimen/detect_type_text_size"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColor="@color/white"
            android:background="@drawable/button_ripple_2"
            android:layout_weight="3"/>

        <Button
            android:id="@+id/detect_type_3"
            android:text="@string/detect_type_3"
            android:textSize="@dimen/detect_type_text_size"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColor="@color/white"
            android:background="@drawable/button_ripple_3"
            android:layout_weight="3"/>

        <Button
            android:id="@+id/output_report"
            android:text="@string/output_report"
            android:textSize="25sp"
            android:textColor="@color/output_report_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/button_ripple_white"
            android:layout_weight="1"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>
</FrameLayout>
