<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/fragment_right"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragment.RightMainFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">
            <Button
                android:id="@+id/detect_type_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@drawable/button_ripple_1"
                android:text="@string/detect_type_1"
                android:textColor="@color/white"
                android:textSize="@dimen/detect_type_text_size"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="#000"/>
        </FrameLayout>
        <Button
            android:id="@+id/detect_type_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@drawable/button_ripple_2"
            android:text="@string/detect_type_2"
            android:textColor="@color/white"
            android:textSize="@dimen/detect_type_text_size"/>

        <Button
            android:id="@+id/detect_type_3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@drawable/button_ripple_3"
            android:text="@string/detect_type_3"
            android:textColor="@color/white"
            android:textSize="@dimen/detect_type_text_size"/>

        <Button
            android:id="@+id/output_report"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/button_ripple_white"
            android:text="@string/output_report"
            android:textColor="@color/output_report_text"
            android:textSize="25sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <Button
                android:text="未检测"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="60dp"
                android:background="@drawable/corner_rect_result_button"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">
            <Button
                android:text="合格"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="60dp"
                android:background="@drawable/corner_rect_result_button"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">
            <Button
                android:text="不合格"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="60dp"
                android:background="@drawable/corner_rect_result_button"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>
